src/styles/style.scss
@mixin widthAndHeight($w, $h) {
  width: $w;
  height: $h;
}

@mixin flexCenter {
  display: flex;
  justify-content: center;
  align-items: center;
}
@mixin flexCenterColumn {
  @include flexCenter;
  flex-flow: column nowrap;
}
@mixin gridFourEvenColumns {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  justify-items: center;
  align-content: center;
}

@mixin uprightFloatingBorder {
  content: "";
  position: absolute;
  @include widthAndHeight(0.1rem, 80%);
  background: var(--alto);
}

*,
::before,
::after {
  margin: 0px;
  padding: 0px;
  border: 0px;
  box-sizing: border-box;
}

html {
  font-size: 10px;
}
body {
  padding: 0 1rem;
  width: 100%;
  min-height: 100vh;
  background: linear-gradient(45deg, var(--eastern-blue), #afe2ff);
}
body::-webkit-scrollbar {
  width: 0.75rem;
  background: var(--white);
}
body::-webkit-scrollbar-thumb {
  background: #212121aa;
}
body::-webkit-scrollbar-thumb:hover {
  background: #212121bb;
}

object {
  pointer-events: none;
}

.overlay {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: #212121ee;
  z-index: 1;
}
.alertPanel {
  margin: 0 auto;
  width: min(100%, 80rem);
  position: fixed;
  top: 50%;
  left: 50%;
  @include flexCenterColumn;
  background: transparent;
  transform: translate(-50%, -50%);
  font-family: "Rubik", Arial, Helvetica, sans-serif;
  color: var(--white);
  text-align: center;
  z-index: 2;
}
.alertPanel-closeBtn {
  @include widthAndHeight(5rem, 5rem);
  @include flexCenter;
  position: absolute;
  top: max(-40vh, -18rem);
  background: transparent;
  border-radius: 5rem;

  .closeIcon {
    @include widthAndHeight(3rem, 3rem);
  }
}
.alertPanel-closeBtn:hover,
.alertPanel-closeBtn:focus {
  border: 0.2rem solid var(--white);
}

.alertPanel-hdng {
  margin-bottom: clamp(2rem, 5vw, 4rem);
  width: min(80%, 60rem);
  color: var(--sundown);
  font-size: clamp(2.5rem, 7vw, 5rem);
}
.alertPanel-detail {
  width: min(80%, 60rem);
  font-size: clamp(1.4rem, 3vw, 2rem);
}

.wrapper {
  margin: 0 auto;
  width: min(100%, 80rem);
  @include flexCenterColumn;
}

.widgetPanel {
  padding: 2rem 0;
  width: 100%;
  position: relative;
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-between;
  align-items: center;
}
.widgetPanel-weatherLocInput {
  padding: 0.5rem 1rem;
  @include widthAndHeight(clamp(15rem, 50vw, 30rem), 4rem);
  border-radius: 1rem;
  font-size: 1.4rem;
  font-family: "Rubik", Arial, Helvetica, sans-serif;
  color: var(--mine-shaft);
}
.widgetPanel-weatherLocInput-autocmpltOn {
  border-radius: 1rem 1rem 0 0;
}

.autocmplt {
  background: var(--white);
  font-family: "Rubik", Arial, Helvetica, sans-serif;
  color: var(--mine-shaft);
}
.autocmplt::-webkit-scrollbar {
  width: 0.5rem;
  background: var(--white);
}
.autocmplt::-webkit-scrollbar-thumb {
  background: #212121aa;
}
.autocmplt::-webkit-scrollbar-thumb:hover {
  background: #212121bb;
}
.autocmplt--weatherLoc {
  @include widthAndHeight(clamp(15rem, 50vw, 30rem), 10.8rem);
  border-top: 0.1rem solid var(--alto);
  border-radius: 0 0 1rem 1rem;
  position: absolute;
  top: 6.5rem;
  overflow: auto;
}
.autocmplt-value {
  padding: 0 0.5rem;
  @include widthAndHeight(100%, 3.5rem);
  background: var(--white);
  font-family: "Rubik", Arial, Helvetica, sans-serif;
  font-size: clamp(1rem, 2vw, 1.2rem);
}
.autocmplt-value:hover,
.autocmplt-value:focus {
  background: var(--seashell);
}
.autocmplt-alert {
  padding: 0 0.5rem;
  @include widthAndHeight(100%, 100%);
  @include flexCenter;
  background: var(--seashell);
  text-align: center;
  font-family: "Rubik", Arial, Helvetica, sans-serif;
  font-size: clamp(1.2rem, 2vw, 1.4rem);
  color: var(--cornflower-lilac);
}

.widgetPanel-settingsBtn {
  @include widthAndHeight(5rem, 5rem);
  background: transparent;
  @include flexCenter;

  .settingsIcon {
    @include widthAndHeight(4.5rem, 4.5rem);
  }
}
.widgetPanel-settingsBtn:hover,
.widgetPanel-settingsBtn:focus {
  background: var(--mine-shaft-opacity-22);
  border-radius: 1rem;
}

.mainWeatherPanel {
  margin: 1rem 0;
  padding: 0 1rem;
  width: 100%;
  display: flex;
  flex-flow: column wrap;
  font-family: "Rubik", Arial, Helvetica, sans-serif;
  color: var(--white);

  .mainWeather {
    margin-bottom: 1.5rem;
    display: grid;
    grid-template-columns: 1fr 1fr;
    justify-items: center;
  }
  .extraTemp {
    margin-top: 1.5rem;
    width: min(50%, 40rem);
    @include flexCenterColumn;
  }
}
.mainWeather-temp {
  @include flexCenterColumn;

  .tempNow {
    margin-bottom: 0.5rem;
    font-size: clamp(4rem, 8vw, 7rem);
    font-weight: 500;
  }
  .weatherLocation {
    margin-top: 0.5rem;
    font-size: clamp(1.4rem, 2.5vw, 2rem);
  }
}
.mainWeather-icon {
  position: relative;
  top: 30%;
  @include widthAndHeight(clamp(9rem, 18vw, 18rem), clamp(9rem, 18vw, 18rem));
}
.extraTemp-maxMin {
  margin-bottom: 0.5rem;
  font-size: clamp(1.4rem, 2.5vw, 2rem);
}
.extraTemp-feelsLike {
  margin-top: 0.5rem;
  font-size: clamp(1.4rem, 2.5vw, 2rem);
}

.forecastPanel {
  margin-top: 5rem;
  padding: 1rem;
  width: min(100%, 55rem);
  display: flex;
  flex-flow: column wrap;
  background: transparent;
  border-radius: 1rem;
  transition: background ease-in-out 275ms;

  .weatherElem {
    min-height: 4.5rem;
    @include gridFourEvenColumns;

    .dummyWeatherDay {
      min-width: 8rem;
    }
    .dummyWeatherIcon {
      min-width: 2rem;
    }
  }

  .forecastData {
    height: clamp(4.5rem, 10vw, 6rem);
    @include gridFourEvenColumns;
    font-family: "Rubik", Arial, Helvetica, sans-serif;
    color: var(--white);
  }
}
.weatherElem-precipitation,
.weatherElem-maxMinTemp {
  @include widthAndHeight(
    clamp(1.5rem, 5vw, 2.5rem),
    clamp(1.5rem, 5vw, 2.5rem)
  );
}
.forecastData-weather {
  @include widthAndHeight(clamp(2rem, 6vw, 4rem), clamp(2rem, 6vw, 4rem));
}
@media screen and (min-width: 260px) {
  .forecastData-weather {
    margin-left: 50%;
  }
}
.forecastData-day,
.forecastData-precipitation,
.forecastData-maxMinTemp {
  height: 100%;
  @include flexCenter;
}
.forecastData-day {
  min-width: 8rem;
  font-size: clamp(1.4rem, 3vw, 2rem);
  overflow: auto;
}
.forecastData-precipitation,
.forecastData-maxMinTemp {
  font-size: clamp(1rem, 3vw, 1.6rem);
}

.extraWeatherPanel {
  margin-top: 3rem;
  padding: 1rem;
  @include widthAndHeight(min(100%, 55rem), clamp(18rem, 40vw, 22rem));
  background: transparent;
  border-radius: 1rem;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  transition: background ease-in-out 275ms;

  .rainVolume,
  .humidity,
  .wind {
    position: relative;
    @include flexCenterColumn;
    font-family: "Rubik", Arial, Helvetica, sans-serif;
    color: var(--white);
  }
  .humidity::before {
    @include uprightFloatingBorder;
    left: 0rem;
  }
  .humidity::after {
    @include uprightFloatingBorder;
    right: 0rem;
  }
}
.rainVolume-icon {
  @include widthAndHeight(4rem, 4rem);
}
.humidity-icon {
  margin-bottom: 1.2rem;
}
.wind-icon {
  margin-bottom: 1.5rem;
  @include widthAndHeight(4rem, 4rem);
}
.rainVolume-data {
  margin-top: 3rem;
  font-size: clamp(1.2rem, 4vw, 2rem);
}
.humidity-data {
  margin-top: 2rem;
  font-size: clamp(1.6rem, 4vw, 2.5rem);
}
.wind-speed,
.wind-direction {
  margin: 0.5rem 0;
  font-size: clamp(1.2rem, 4vw, 2rem);
}
.wind-direction {
  color: var(--cornflower-lilac);
}
.rainVolume-detail,
.humidity-detail {
  color: var(--alto);
  text-align: center;
}
.rainVolume-detail {
  margin-top: 3rem;
  min-width: 6rem;
  font-size: clamp(0.8rem, 2vw, 1.2rem);
}
.humidity-detail {
  margin-top: 3rem;
  font-size: clamp(0.8rem, 2vw, 1.2rem);
}
.wind-detail {
  margin-top: 1rem;
  color: var(--alto);
  text-align: center;
  font-size: clamp(0.8rem, 2vw, 1.2rem);
}

.suntimePanel {
  margin-top: 3rem;
  padding: 1rem;
  @include widthAndHeight(min(100%, 55rem), clamp(16rem, 40vw, 22rem));
  background: transparent;
  border-radius: 1rem;
  display: grid;
  grid-template-columns: 1fr 1fr;
  justify-items: center;
  align-content: center;
  transition: background ease-in-out 275ms;

  .sunrise,
  .sunset {
    @include flexCenterColumn;
    font-family: "Rubik", Arial, Helvetica, sans-serif;
    color: var(--white);
  }
}
.sunrise-icon,
.sunset-icon {
  @include widthAndHeight(clamp(6rem, 15vw, 9rem), clamp(6rem, 15vw, 9rem));
}
.sunrise-time,
.sunset-time {
  margin: 1.5rem 0;
  font-size: clamp(1.6rem, 4vw, 2.5rem);
  font-weight: 500;
}
.sunrise-detail,
.sunset-detail {
  font-size: clamp(0.8rem, 3vw, 1.2rem);
  color: var(--alto);
}

.weatherRadarPanel {
  margin-top: 3rem;
  padding: 1rem 0;
  @include widthAndHeight(min(100%, 55rem), auto);
  background: transparent;
  border-radius: 1rem;
  @include flexCenter;
  transition: background ease-in-out 275ms;

  .weatherRadar {
    @include flexCenter;
  }
}
.weatherRadar-img {
  width: 90%;
  height: 30rem;
  object-fit: cover;
}

.footer {
  margin-top: 2rem;
  padding: 2rem 0;
  width: 100%;
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-between;
  align-items: center;
  font-family: "Rubik", Arial, Helvetica, sans-serif;
  color: var(--white);

  .openWeatherLink {
    margin-left: 1rem;
  }
  .openWeatherLink-img {
    width: 7rem;
  }
  .weatherLastUpdated {
    margin-right: 1rem;
    font-size: clamp(1rem, 3vw, 1.2rem);
  }
}

.elem-hide {
  display: none;
}

